--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <header class="w-full max-w-3xl mb-8">
     <h1 class="text-3xl font-bold text-center text-gray-800 mb-4">Пошук фільмів</h1>
     <form class="flex">
-      <input type="text" id="searchFilm" placeholder="Введіть назву фільму англійською, наприклад Bagitman..."
+      <input type="text" id="searchFilm" placeholder="Введіть назву фільму англійською, наприклад Batman..."
         class="flex-grow p-3 rounded-l-md border border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-400">
       <!-- <input type="button" value="Пошук" id="submitBtn"
         class="bg-blue-500 text-white p-3 rounded-r-md hover:bg-blue-600 transition"> -->
